client/public/css/styles.css
/*==========index.html==========*/

.social {
  height: 50px;
  width: 50px;
  text-align: center;
}
.social:hover {
  -webkit-filter:saturate(2.0);
}
.modal-row {
  margin-bottom: 0;
}

/*=====modal=====*/
.modal-content{
  padding-left: 0;
  padding-right: 0;
}

.dactive{
  background: #485B61 !important;
}

/*=====navbar=====*/

.navbar-font-color{
  color:#90caf9;
}

/*=====footer=====*/

/*keeps the footer fixed to the bottom of the page*/
body {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

main {
  flex: 1 0 auto;
}

#footer-spacer{
  padding-left: 5em;
}

.footer-row-title{
  color:white;
}
.social-footer{
  height:15px;
  width:15px;
  padding-top: 2px;
}

#responsive-footer-container{
  color:white;
}

#footer{
  margin-top: 0;
}

/*changes background of popped-out portion*/
#footer-collapsible{
  border-color:#424242;
}

/*changes color of non-popped-out collapsible*/
.footer-collapsible-header{
  background-color: #424242;
}

.drop-down-container{
  font-size:12px;
  padding: 5px;
}

.collapsible-content-spacer{
  color:#90caf9;
  padding-left: 1.5em;
  padding-top: .5em;
  padding-bottom: .5em;
}

/*==========landing.html==========*/

/*=====feature-tour=====*/
.introjs-helperNumberLayer{
  font-size: 1.5em;
  width: 30px;
  height:30px;
  padding-top: 3px;
}

/*=====how-it-works=====*/

.hiw-button-adjuster{
  margin-top: -.3em;
}

.hiw-responsive-content{
  font-size: 1em;
  text-align: left;
}

#hiw-responsive-header{
  color:white;
  text-align: center;
}

#hiw-shell-container{
  border: 3px solid black;
  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
  text-align: center;
}

#hiw-inner-shell{
  margin-bottom:0;
  padding-top:.1em;
  border-bottom:3px solid black;
  background-color: #90caf9;
}

#hiw-inner-container{
  border: 3px solid black;
  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
  background-color: white;
}

#how-it-works-container{
  border: 3px solid black;
  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
}

#hiw-call-to-action-container{
  padding:.1em 2em .1em;
}

#hiw-responsive-footer{
  padding-top:1.5em;
  padding-bottom: 1.5em;
  margin-bottom: 0;
  background-color: #90caf9;
  border-top: 3px solid black;
}

.how-it-works-contents{
  border-right-style: dashed;
  border-right-width: .1em;
}

.hiw-content-title{
  font-size: 2em;
  margin-bottom: .3em;
}

.hiw-hover-icon{
  margin-top: -1.2em;
  color: #f57c00;
}

#responsive-parallax{

}

#hiw-large-title{
  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
  padding-bottom: .2em;
  margin-bottom: .2em;
  color:black;
}

/*=====tech-stack=====*/
#tech-stack-container{
  padding-left: 2em;
}

#tech-stack-outer-shell{
  background-color: #90caf9;
  color:#f57c00;
  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
}

#angularImage{
  margin-left: 12px;
  height: 15em;
  width:15em;
  margin-right:0;
}

#postgresImage{
  height: 15em;
}

#nodeImage{
  height: 8.5em;
  margin-bottom:0;
  margin-top: 0;
}

#expressImage{
  height: 5em;
}

/*=====FAQ=====*/

.icon-color-modifier{
  color:#f57c00;
}

.faq-outer-panel{
  background-color: #424242;
  color:white;
}

.faq-inner-panel{
  background-color: #424242;
  color:#90caf9;
}

#faq-outermost-container{
  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
  font-size:1.1em;
  padding-bottom: 2em;
}

/*=====team-intro cards=====*/
.intro-card-padder{
  padding-top:1em;
}

.card-reveal-content{
  font-size:.8em;
}

/*changes size of p-content below card title*/
.card-content{
  font-size:.8em;
}

.card-spacer{
  padding-top: .4em;
}

.card-title-sizer{
  font-size:1em;
}

#team-intro-card-holder{
  padding-top: .6em;
  margin-bottom: 0;
  padding-bottom: 2em;
  background-color: #90caf9;
  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
}

/*will equally space all cards along a given screen width*/
/*.card-container{
  display:flex;
  justify-content:space-between;
}*/

.dev-team{
  text-align: center;
}

.collection-item.avatar {
  height: 60px;
  width: 60px;
}

/*===========recipes===========*/
.button-add {
  /*margin-top: 30px;*/
}

.price {
  float:right;
  font-size:16px;
  color:green;
}

.card-small {
  min-width: 250px;
}

.container .ng-scope {
  width: 100%;
}

.material-icons {
  font-size: 2em;
}

.search-bar{
  /*margin-top: 2.6em;*/
  font-size: .9em;
  margin-top:1em;
  width: 48%;
}

#add-recipes-button{
  margin-left: .5em;
  margin-bottom:.5em;
}

#add-recipe-title-container{
  font-size:1.2em;
  font-style: thin;
  margin-bottom: 0;
}

/*========create-recipes=========*/

.addButton {
  position:relative;
  min-height:50px;
}

.bottom {
  position:absolute;
  bottom:0;
  left:0;
}

.trash-small {
  height:18px;
  width:18px;
}

.trash-icon-small {
  font-size:16px;
  position:relative;
  bottom:13px;
}

.error {
  font-size:12px;
  font-family:monospace;
  color:red;
}

/*========recipe-instructions=========*/

#comments {
  height:auto;
  max-width:600px;
  color:#999;
  font-weight:400;
  font-size:16px;
  font-family:'Ubuntu', Helvetica, Arial, sans-serif;
  width:100%;
  background:#fff;
  border-radius:3px;
  line-height:1.2em;
  border:none;
  box-shadow:0px 0px 5px 1px rgba(0,0,0,0.1);
  padding:30px;
  max-height: 150px;
  overflow: scroll;
  -webkit-transition: height 2s ease;
  -moz-transition: height 2s ease;
  -ms-transition: height 2s ease;
  -o-transition: height 2s ease;
  transition: height 2s ease;
  -webkit-font-smoothing:antialiased !important;
}

/*========dashboard=========*/

.double-digit-steps{
  font-size: 1.5em;
  width: 50px;
  height:50px;
  /*padding-top: 3px;*/
}

.card-colorer{
  background: #131313;
  color: #90caf9;
  border: solid 2px;
  border-color:black;
}

.clickable-content-color{
  color:#ef6c00;
}

.title-type-content{
  color:white;
}

.bullet-point-type-content{
  color:#90caf9;
}

/*.interior-card-colorer{
  background: black;
}*/

/*========shopping-list=========*/

.quantity {
  width:50px;
}

.priceForm {
  display:inline-block;
}

.list-price {
  color: green;
}

/*============fridge============*/

.bottom-right {
  bottom: 45px;
  right: 24px;
}

.minus {
  position:relative;
  bottom:12px;
}

.minus-small {
  height:12px;
  width:12px;
}

#expire-message {
  color:red;
  flex: initial;
}

#date-message {
  flex: initial;
}

